# road-extraction

./: .gitignore  README.md  kaggle_showcase.ipynb  pyproject.toml  requirements.txt
.claude/: launch.json
configs/: deeplabv3plus.yaml  linknet.yaml  unet.yaml  unetpp.yaml
deploy/: DEPLOY.md  Dockerfile  README-space.md
notebooks/: colab_1_prepare_data.ipynb  colab_2_train.ipynb  kaggle_1_prepare_data.ipynb  kaggle_2_train.ipynb  kaggle_2_train_session_b.ipynb
paper/: main.tex
results/: comparison.csv  comparison.tex
results/deepglobe/: comparison.csv  comparison.tex
results/georef/: 22078975_15_unetpp.geojson  22078975_15_unetpp_map.html  22078975_15_unetpp_osm_stats.json
scripts/: make_kaggle_notebooks.py  make_notebooks.py
src/roadx/: app.py  evaluate.py  figures.py  georef.py  losses.py  metrics.py  models.py  predict.py  train.py
src/roadx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
web/: index.html
