[project]
name = "roadx"
version = "0.1.0"
description = "Road extraction from satellite imagery: comparative study of segmentation models"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
